stop scroll snap on mobile devices

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,23 +1,23 @@
 @mixin lg-screen {
-  @media only screen and (max-width: 3000px) {
+  @media only screen and (min-width: 3000px) {
     @content;
   }
 }
 
 @mixin md-screen {
-  @media only screen and (max-width: 1800px) {
+  @media only screen and (min-width: 1800px) {
     @content;
   }
 }
 
 @mixin sm-screen {
-  @media only screen and (max-width: 1100px) {
+  @media only screen and (min-width: 1100px) {
     @content;
   }
 }
 
 @mixin xs-screen {
-  @media only screen and (max-width: 900px) {
+  @media only screen and (min-width: 0px) {
     @content;
   }
 }
@@ -29,8 +29,11 @@
   // forces footer at bottom
   display: flex;
   flex-direction: column;
-  scroll-snap-align: start;
-  scroll-snap-stop: normal;
+
+  @include sm-screen {
+    scroll-snap-align: start;
+    scroll-snap-stop: normal;
+  }
 }
 
 .mainContent {
@@ -39,16 +42,17 @@
 }
 
 .mainContainer {
-  // force scroll snapping
-  overflow-y: scroll;
   max-height: 100vh;
-  scroll-snap-type: y mandatory;
+
+  // force scroll snapping on larger screen sizes
+  @include sm-screen {
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+  }
 }
 
 .splash {
   height: 100vh;
-  // want to align scroll at the start (will take up the whole page regardless)
-  scroll-snap-align: start;
   display: flex;
   flex-direction: column;
   background: url(/images/me_tetons_large.jpg) no-repeat center center fixed;
@@ -67,6 +71,7 @@
   @include sm-screen {
     background: url(/images/me_tetons_small.jpg) no-repeat center center;
     background-size: cover;
+    scroll-snap-align: start;
   }
 
   @include xs-screen {
